2010-02-10  Jaroslav Hajek  <highegg@gmail.com>

	* general/private/__isequal__.m: Remove list-related stub.

2010-02-09  John W. Eaton  <jwe@octave.org>

	* image/imshow.m: Allow logical values for images.

2010-02-09  Jaroslav Hajek  <highegg@gmail.com>

	* general/accumarray.m: Use != instead of diff to compare indices in
	dense case. Set explicit mode in sparse case to aid optimization.

2010-02-09  Jaroslav Hajek  <highegg@gmail.com>

	* miscellaneous/menu.m: Use sscanf rather than eval.

2010-02-09  Jaroslav Hajek  <highegg@gmail.com>

	* miscellaneous/substruct.m: Vectorize.

2010-02-08  Jaroslav Hajek  <highegg@gmail.com>

	* general/accumarray.m: Document complexity.

2010-02-08  Jaroslav Hajek  <highegg@gmail.com>

	* general/accumarray.m: Add new test that also forces index cache
	generation for faster sorting.

2010-02-08  Jaroslav Hajek  <highegg@gmail.com>

	* general/accumarray.m: 1 more small fix.

2010-02-06  Jaroslav Hajek  <highegg@gmail.com>

	* general/accumarray.m: Small fixes.

2010-02-05  Jaroslav Hajek  <highegg@gmail.com>

	* general/accumarray.m: Rewrite. Split sparse and dense case. Treat
	cell-valued subs efficiently. Optimize dense case for @sum, @max and
	@min. Optimize the @(x){x} reduction. Add tests.

2010-02-04  Jaroslav Hajek  <highegg@gmail.com>

	* miscellaneous/dir.m: Fix month passed to datenum.

2010-02-03  Jaroslav Hajek  <highegg@gmail.com>

	* general/private/__isequal__.m: Handle function handles.

2010-02-01  David Bateman  <dbateman@free.fr>

	* plot/__go_draw_axes__.m (get_old_gnuplot_color): Remove as
	no longer used (for gnuplot 4.0).

	* plot/private/__scatter__.m: Treat "flat" colored patches as
	a single patch.
	* plot/__go_draw_axes__.m: If a patch object is flat, treat its
	outline with the gnuplot "palette".

2010-01-30  Thorsten Meyer  <thorsten.meyier@gmx.de>

	* statistics/tests/kruskal_wallis_test.m: Replace chisquare_cdf
	by chi2cdf.

2010-01-29  Ben Abbott  <bpabbott@mac.com>
