@@ -5,6 +5,7 @@ optimization_PRIVATE_FCN_FILES = \
 
 optimization_FCN_FILES = \
   optimization/__all_opts__.m \
+  optimization/fminbnd.m \
   optimization/fminunc.m \
   optimization/fsolve.m \
   optimization/fzero.m \
